--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,64 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Blank
+      Access Control / Work Time
     </ion-title>
+
+    <ion-buttons slot="primary">
+      <ion-button>
+        <ion-icon name="ellipsis-vertical"></ion-icon>
+      </ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <ion-card>
+    <ion-card-content>
+      <div>
+        <!-- current time from system clock-->
+        <h1>{{currentDate | date:'shortTime'}}</h1>
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+        <!-- dynamically change between set work hours -->
+        <h1 (click)="onTap()">{{accessStatus}}</h1>
+      </div>
+
+      <div>
+        <!-- last data in workTable -->
+        <!-- <h2>Mario Rossi [ENTER 08:11]</h2> -->
+        <h2 *ngIf="lastOperation">{{detail?.description}} [ {{lastOperation?.enterExit}}
+          {{lastOperation?.dateTime | date:'shortTime'}} ]</h2>
+      </div>
+
+      <div>
+        <!-- display detected bar code -->
+        <ion-input (ionChange)="onScan($event)" [(ngModel)]="scanResult" class="scanInput" #homeInput autofocus="">
+        </ion-input>
+      </div>
+    </ion-card-content>
+  </ion-card>
+
+  <ion-buttons class="bottom_cta">
+    <ion-button color="dark" fill="solid" (click)="openFullscreen()" *ngIf="isFullscreen == false">
+      <div>
+        <ion-icon name="expand"></ion-icon>
+        <ion-text>Fullscreen</ion-text>
+      </div>
+    </ion-button>
+
+    <ion-button color="dark" fill="solid" (click)="closeFullscreen()" *ngIf="isFullscreen == true">
+      <div>
+        <ion-icon name="remove"></ion-icon>
+        <ion-text>Exit Fullscreen</ion-text>
+      </div>
+    </ion-button>
+
+
+    <!-- <ion-button color="dark" fill="solid">
+      <div>
+        <ion-icon name="checkmark-circle-outline"></ion-icon>
+        <ion-text>Clear</ion-text>
+      </div>
+    </ion-button> -->
+  </ion-buttons>
 </ion-content>
